# NetSherlock

./: .env.example  .gitignore  CLAUDE.md  ICON_INTEGRATION_SUMMARY.md  README.md  pyproject.toml
.claude/: settings.json
config/: demo-inventory.yaml  e2e-test-phy620.yaml  global-inventory-template.yaml  global_inventory.yaml  minimal-input-template.yaml  mock-test.yaml  test-e2e-diagnosis.yaml  test-env.yaml
docs/: DIAGNOSIS_STATUS_ANALYSIS_INDEX.md  ICON_DELIVERABLES.md  ICON_DESIGN_PROPOSAL.md  ICON_DESIGN_SUMMARY.md  ICON_IMPLEMENTATION_COMPLETE.md  ICON_INTEGRATION_GUIDE.md  NetSherlock-design.md  TRIGGER_PROPERTY_ALIGNMENT.md  claude-agent-sdk-design.md  diagnosis-status-alignment-report.md  diagnosis-status-analysis-summary.md  diagnosis-status-diagrams.md  diagnosis-status-quick-reference.md  e2e-diagnosis-test-guide.md  findings.md  framework-selection-plan.md  frontend-backend-integration-analysis.md  hackathon-presentation.md  implementation-guide.md  network-aiops-requirement-and-user-stories.md  requirements-and-user-stories.md  sharded-cooking-balloon.md  system-network-fault-injection.md  system-network-latency-e2e.md  usage-guide.md  user-guide.md  vm-fault-injection.md
examples/: CURL_QUICK_REFERENCE.md  README.md  SYSTEM_NETWORK_PROBE_GUIDE.md  create_system_network_probe.py  create_system_network_probe.sh  test_system_probe.sh
measurement-20260204-175008/: vm_latency_report.md
measurement-20260204-175437/: vm_drop_report.md
measurement-20260204-175710/: diagnosis_report.md
measurement-20260204-180934/: diagnosis_report.md
measurement-20260204-181304/: diagnosis_report.md
measurement-20260204-181534/: drop_report.md
measurement-20260204-181846/: vm_latency_report.md
measurement-20260204-182308/: vm_drop_report.md
measurement-20260204-184805/: drop_report.md
measurement-20260204-190717/: diagnosis_report.md
measurement-20260204-190934/: diagnosis_report.md
measurement-20260204-191133/: diagnosis_report.md
measurement-20260205-165301/: diagnosis_report.md
measurement-20260205-174734/: vm_latency_report.md
(+243 files in other folders)
